--- a/src/app/components/iconDesk/iconDesk.css
+++ b/src/app/components/iconDesk/iconDesk.css
@@ -31,3 +31,10 @@
 #IconDesk.iconXD svg{
     font-size: 28px;
 }
+
+#IconDesk.showIcon {
+    display: block;
+}
+#IconDesk.hideIcon {
+    display: none;
+}
