--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -131,6 +131,21 @@ hr.pink{
   cursor: pointer;
 }
 
+.themeInput.green{
+  border:1px solid rgba(76, 179, 76);
+}
+.themeInput.white{
+  border:1px solid white;
+}
+.themeInput.pink{
+  border:1px solid rgb(179, 76, 76);
+}
+
+.themeInput {
+  background-color: transparent;
+  outline: 0px;
+}
+
 /* Input Range */
 input[type=range].themeRange.green::-webkit-slider-thumb {
   background: rgba(76, 179, 76);
@@ -150,6 +165,30 @@ input[type=range].themeRange.white::-moz-range-thumb {
 }
 input[type=range].themeRange.pink::-moz-range-thumb {
   background: rgb(179, 76, 76);
+}
+
+
+/* Tooplit o esa madre*/
+.tippy-box[data-theme~='green'] {
+  background-color: rgb(22, 22, 22);
+  border: solid 1px rgba(76, 179, 76);
+  color: rgba(76, 179, 76);
+  /* font-size: 12px; */
+  border-radius: 2px;
+}
+.tippy-box[data-theme~='white'] {
+  background-color: rgb(22, 22, 22);
+  border: solid 1px white;
+  color: white;
+  /* font-size: 12px; */
+  border-radius: 2px;
+}
+.tippy-box[data-theme~='pink'] {
+  background-color: rgb(22, 22, 22);
+  border: solid 1px rgb(179, 76, 76);
+  color: rgb(179, 76, 76);
+  /* font-size: 12px; */
+  border-radius: 2px;
 }
 
 
