--- a/src/app/views/landing/styleLanding.css
+++ b/src/app/views/landing/styleLanding.css
@@ -97,3 +97,31 @@
 .landingHelp h2, .landingVer h5{
     margin: 0;
 }
+
+/* Login */
+
+.slotUser {
+    width: 100%;
+    height: 75px;
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.slotUser .iconUser{ 
+    font-size: 25px;
+    margin: 0 15px 0 0;
+}
+.slotUser .dataUser{ 
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.slotUser .extraDataUser {
+    display: inline-flex;
+}
+.slotUser .extraDataUser p{
+    margin-right: 50px;
+}
